# 3dEngine

./: CMakeLists.txt
src/: BilinearInterpolator.h  Camera.cpp  Camera.h  Controler.cpp  Controler.h  FlatShader.cpp  FlatShader.h  Interpolator.cpp  Interpolator.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  NormalModifier.cpp  NormalModifier.h  ObjDeserializer.cpp  ObjDeserializer.h  Point.cpp  Point.h  Scene.cpp  Scene.h  Texture.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  View.cpp  View.h  main.cpp
tests/: Benchmark.cpp  BilinearInterpolatorTests.cpp  InterpolatorTests.cpp  MatrixTests.cpp  ObjDeserializerTests.cpp  PointTests.cpp  SceneTests.cpp  TestTests.cpp  VectorTests.cpp
